--- a/JavaScript Tutorial/index.html
+++ b/JavaScript Tutorial/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title></title>
+    <title>JavaScript Tutorial</title>
   </head>
   <body>
-    <h1></h1>
+    <h1>JavaScript Tutorial</h1>
     <script src="script.js"></script>
   </body>
 </html>
