--- a/JavaScript Tutorial/index.html
+++ b/JavaScript Tutorial/index.html
@@ -8,6 +8,23 @@
   </head>
   <body>
     <h1>JavaScript Tutorial</h1>
+
+    <h2>Lesson 4 Exercises</h2>
+    <button>Click</button>
+    <br />
+    <br />
+    <button>Que</button><button>Chicken</button>
+    <p>Hello, World!</p>
+    <p>Today, I took my pills.</p>
+
+    <p>Adults Plain Cotton T-shirt</p>
+    <p>Price: $7.99</p>
+    <button class="add" onclick="alert('Added')">Add to cart</button>
+    <button class="buy" onclick="console.log('Loading...'); alert('Purchased')">
+      Buy now
+    </button>
+
+    <h2>Lesson 5 - Variables</h2>
     <script src="script.js"></script>
   </body>
 </html>
