--- a/JavaScript Tutorial/05-variables.html
+++ b/JavaScript Tutorial/05-variables.html
@@ -13,8 +13,33 @@
     <button onclick="addToCart();">Add to Cart</button>
     <button onclick="add2();">+2</button>
     <button onclick="add3();">+3</button>
+    <button onclick="add4();">+4</button>
+    <button onclick="add5();">+5</button>
+    <button onclick="removeCart();">Remove from Cart</button>
     <button onclick="reCart();">Reset Cart</button>
 
-    <script src="script.js"></script>
+    <h2>Calculator</h2>
+    <p>
+      <button onclick="one();">1</button>
+      <button onclick="two();">2</button>
+      <button onclick="three();">3</button>
+    </p>
+    <p>
+      <button onclick="four();">4</button>
+      <button onclick="five();">5</button>
+      <button onclick="six();">6</button>
+    </p>
+    <p>
+      <button onclick="seven();">7</button>
+      <button onclick="eight();">8</button>
+      <button onclick="nine();">9</button>
+    </p>
+    <p>
+      <button onclick="zero();">0</button>
+      <button onclick="add();">+</button>
+      <button onclick="equals();">=</button>
+
+      <script src="script.js"></script>
+    </p>
   </body>
 </html>
