--- a/JavaScript Tutorial/index.html
+++ b/JavaScript Tutorial/index.html
@@ -24,7 +24,11 @@
       Buy now
     </button>
 
-    <h2>Lesson 5 - Variables</h2>
+    <h2>Lesson 5 - Variables = 05-variables.html</h2>
+
+    <h2>Lesson 6 - Booleans & If-Statements = 06-booleans.html</h2>
+
+    <h2>Lesson 7 - functions</h2>
     <script src="script.js"></script>
   </body>
 </html>
